src/cpp/include/mujoco/mujoco.h


MJAPI void mjr_rectangle(mjrRect viewport, float r, float g, float b, float a);
MJAPI void mjr_label(mjrRect viewport, int font, const char* txt,
                     float r, float g, float b, float a, float rt, float gt, float bt,
                     const mjrContext* con);
MJAPI void mjr_figure(mjrRect viewport, mjvFigure* fig, const mjrContext* con);
MJAPI void mjr_render(mjrRect viewport, mjvScene* scn, const mjrContext* con);
MJAPI void mjr_finish(void);
MJAPI int mjr_getError(void);
MJAPI int mjr_findRect(int x, int y, int nrect, const mjrRect* rect);
MJAPI mjuiThemeSpacing mjui_themeSpacing(int ind);
MJAPI mjuiThemeColor mjui_themeColor(int ind);
MJAPI void mjui_add(mjUI* ui, const mjuiDef* def);
MJAPI void mjui_addToSection(mjUI* ui, int sect, const mjuiDef* def);
MJAPI void mjui_resize(mjUI* ui, const mjrContext* con);
MJAPI void mjui_update(int section, int item, const mjUI* ui,
                       const mjuiState* state, const mjrContext* con);
MJAPI mjuiItem* mjui_event(mjUI* ui, mjuiState* state, const mjrContext* con);
MJAPI void mjui_render(mjUI* ui, const mjuiState* state, const mjrContext* con);
MJAPI void mju_error(const char* msg, ...) mjPRINTFLIKE(1, 2);
MJAPI void mju_error_i(const char* msg, int i);
MJAPI void mju_error_s(const char* msg, const char* text);
MJAPI void mju_warning(const char* msg, ...) mjPRINTFLIKE(1, 2);
MJAPI void mju_warning_i(const char* msg, int i);
MJAPI void mju_warning_s(const char* msg, const char* text);
MJAPI void mju_clearHandlers(void);
MJAPI void* mju_malloc(size_t size);
MJAPI void mju_free(void* ptr);
MJAPI void mj_warning(mjData* d, int warning, int info);
MJAPI void mju_writeLog(const char* type, const char* msg);
MJAPI const char* mjs_getError(mjSpec* s);
MJAPI int mjs_isWarning(mjSpec* s);
MJAPI void mju_zero3(mjtNum res[3]);
MJAPI void mju_copy3(mjtNum res[3], const mjtNum data[3]);
MJAPI void mju_scl3(mjtNum res[3], const mjtNum vec[3], mjtNum scl);
MJAPI void mju_add3(mjtNum res[3], const mjtNum vec1[3], const mjtNum vec2[3]);
MJAPI void mju_sub3(mjtNum res[3], const mjtNum vec1[3], const mjtNum vec2[3]);
MJAPI void mju_addTo3(mjtNum res[3], const mjtNum vec[3]);
MJAPI void mju_subFrom3(mjtNum res[3], const mjtNum vec[3]);
MJAPI void mju_addToScl3(mjtNum res[3], const mjtNum vec[3], mjtNum scl);
MJAPI void mju_addScl3(mjtNum res[3], const mjtNum vec1[3], const mjtNum vec2[3], mjtNum scl);
MJAPI mjtNum mju_normalize3(mjtNum vec[3]);
MJAPI mjtNum mju_norm3(const mjtNum vec[3]);
MJAPI mjtNum mju_dot3(const mjtNum vec1[3], const mjtNum vec2[3]);
MJAPI mjtNum mju_dist3(const mjtNum pos1[3], const mjtNum pos2[3]);
MJAPI void mju_mulMatVec3(mjtNum res[3], const mjtNum mat[9], const mjtNum vec[3]);
MJAPI void mju_mulMatTVec3(mjtNum res[3], const mjtNum mat[9], const mjtNum vec[3]);
MJAPI void mju_cross(mjtNum res[3], const mjtNum a[3], const mjtNum b[3]);
MJAPI void mju_zero4(mjtNum res[4]);
MJAPI void mju_unit4(mjtNum res[4]);
MJAPI void mju_copy4(mjtNum res[4], const mjtNum data[4]);
MJAPI mjtNum mju_normalize4(mjtNum vec[4]);
MJAPI void mju_zero(mjtNum* res, int n);
MJAPI void mju_fill(mjtNum* res, mjtNum val, int n);
MJAPI void mju_copy(mjtNum* res, const mjtNum* vec, int n);
MJAPI mjtNum mju_sum(const mjtNum* vec, int n);
MJAPI mjtNum mju_L1(const mjtNum* vec, int n);
MJAPI void mju_scl(mjtNum* res, const mjtNum* vec, mjtNum scl, int n);
MJAPI void mju_add(mjtNum* res, const mjtNum* vec1, const mjtNum* vec2, int n);
MJAPI void mju_sub(mjtNum* res, const mjtNum* vec1, const mjtNum* vec2, int n);
MJAPI void mju_addTo(mjtNum* res, const mjtNum* vec, int n);
MJAPI void mju_subFrom(mjtNum* res, const mjtNum* vec, int n);
MJAPI void mju_addToScl(mjtNum* res, const mjtNum* vec, mjtNum scl, int n);
MJAPI void mju_addScl(mjtNum* res, const mjtNum* vec1, const mjtNum* vec2, mjtNum scl, int n);
MJAPI mjtNum mju_normalize(mjtNum* res, int n);
MJAPI mjtNum mju_norm(const mjtNum* res, int n);
MJAPI mjtNum mju_dot(const mjtNum* vec1, const mjtNum* vec2, int n);
MJAPI void mju_mulMatVec(mjtNum* res, const mjtNum* mat, const mjtNum* vec, int nr, int nc);
MJAPI void mju_mulMatTVec(mjtNum* res, const mjtNum* mat, const mjtNum* vec, int nr, int nc);
MJAPI mjtNum mju_mulVecMatVec(const mjtNum* vec1, const mjtNum* mat, const mjtNum* vec2, int n);
MJAPI void mju_transpose(mjtNum* res, const mjtNum* mat, int nr, int nc);
MJAPI void mju_symmetrize(mjtNum* res, const mjtNum* mat, int n);
MJAPI void mju_eye(mjtNum* mat, int n);
MJAPI void mju_mulMatMat(mjtNum* res, const mjtNum* mat1, const mjtNum* mat2,
                         int r1, int c1, int c2);
MJAPI void mju_mulMatMatT(mjtNum* res, const mjtNum* mat1, const mjtNum* mat2,
                          int r1, int c1, int r2);
MJAPI void mju_mulMatTMat(mjtNum* res, const mjtNum* mat1, const mjtNum* mat2,
                          int r1, int c1, int c2);
MJAPI void mju_sqrMatTD(mjtNum* res, const mjtNum* mat, const mjtNum* diag, int nr, int nc);
MJAPI void mju_transformSpatial(mjtNum res[6], const mjtNum vec[6], int flg_force,
                                const mjtNum newpos[3], const mjtNum oldpos[3],
                                const mjtNum rotnew2old[9]);
MJAPI int mju_dense2sparse(mjtNum* res, const mjtNum* mat, int nr, int nc,
                           int* rownnz, int* rowadr, int* colind, int nnz);
MJAPI void mju_sparse2dense(mjtNum* res, const mjtNum* mat, int nr, int nc,
                            const int* rownnz, const int* rowadr, const int* colind);
MJAPI void mju_rotVecQuat(mjtNum res[3], const mjtNum vec[3], const mjtNum quat[4]);
MJAPI void mju_negQuat(mjtNum res[4], const mjtNum quat[4]);
MJAPI void mju_mulQuat(mjtNum res[4], const mjtNum quat1[4], const mjtNum quat2[4]);
MJAPI void mju_mulQuatAxis(mjtNum res[4], const mjtNum quat[4], const mjtNum axis[3]);
MJAPI void mju_axisAngle2Quat(mjtNum res[4], const mjtNum axis[3], mjtNum angle);
MJAPI void mju_quat2Vel(mjtNum res[3], const mjtNum quat[4], mjtNum dt);
MJAPI void mju_subQuat(mjtNum res[3], const mjtNum qa[4], const mjtNum qb[4]);
MJAPI void mju_quat2Mat(mjtNum res[9], const mjtNum quat[4]);
MJAPI void mju_mat2Quat(mjtNum quat[4], const mjtNum mat[9]);
MJAPI void mju_derivQuat(mjtNum res[4], const mjtNum quat[4], const mjtNum vel[3]);
MJAPI void mju_quatIntegrate(mjtNum quat[4], const mjtNum vel[3], mjtNum scale);
MJAPI void mju_quatZ2Vec(mjtNum quat[4], const mjtNum vec[3]);
MJAPI int mju_mat2Rot(mjtNum quat[4], const mjtNum mat[9]);
MJAPI void mju_euler2Quat(mjtNum quat[4], const mjtNum euler[3], const char* seq);
MJAPI void mju_mulPose(mjtNum posres[3], mjtNum quatres[4],
                       const mjtNum pos1[3], const mjtNum quat1[4],
                       const mjtNum pos2[3], const mjtNum quat2[4]);
MJAPI void mju_negPose(mjtNum posres[3], mjtNum quatres[4],
                       const mjtNum pos[3], const mjtNum quat[4]);
MJAPI void mju_trnVecPose(mjtNum res[3], const mjtNum pos[3], const mjtNum quat[4],
                          const mjtNum vec[3]);
MJAPI int mju_cholFactor(mjtNum* mat, int n, mjtNum mindiag);