src/cpp/include/mujoco/mjui.h


struct mjuiState_ {               
  int nrect;                      
  mjrRect rect[mjMAXUIRECT];      
  void* userdata;                 
  int type;                       
  int left;                       
  int right;                      
  int middle;                     
  int doubleclick;                
  int button;                     
  double buttontime;              
  double x;                       
  double y;                       
  double dx;                      
  double dy;                      
  double sx;                      
  double sy;                      
  int control;                    
  int shift;                      
  int alt;                        
  int key;                        
  double keytime;                 
  int mouserect;                  
  int dragrect;                   
  int dragbutton;                 
  int dropcount;                  
  const char** droppaths;         
};
typedef struct mjuiState_ mjuiState;
struct mjuiThemeSpacing_ {        
  int total;                      
  int scroll;                     
  int label;                      
  int section;                    
  int cornersect;                 
  int cornersep;                  
  int itemside;                   
  int itemmid;                    
  int itemver;                    
  int texthor;                    
  int textver;                    
  int linescroll;                 
  int samples;                    
};
typedef struct mjuiThemeSpacing_ mjuiThemeSpacing;
struct mjuiThemeColor_ {          
  float master[3];                
  float thumb[3];                 
  float secttitle[3];             
  float secttitle2[3];            
  float secttitleuncheck[3];      
  float secttitleuncheck2[3];     
  float secttitlecheck[3];        
  float secttitlecheck2[3];       
  float sectfont[3];              
  float sectsymbol[3];            
  float sectpane[3];              
  float separator[3];             
  float separator2[3];            
  float shortcut[3];              
  float fontactive[3];            
  float fontinactive[3];          
  float decorinactive[3];         
  float decorinactive2[3];        
  float button[3];                
  float check[3];                 
  float radio[3];                 
  float select[3];                
  float select2[3];               
  float slider[3];                
  float slider2[3];               
  float edit[3];                  
  float edit2[3];                 
  float cursor[3];                
};
typedef struct mjuiThemeColor_ mjuiThemeColor;
struct mjuiItem_ {                
  int type;                       
  char name[mjMAXUINAME];         
  int state;                      
  void *pdata;                    
  int sectionid;                  
  int itemid;                     
  int userid;                     
  union {
    struct mjuiItemSingle_ single;  
    struct mjuiItemMulti_ multi;    
    struct mjuiItemSlider_ slider;  
    struct mjuiItemEdit_ edit;      
  };
  mjrRect rect;                   
  int skip;                       
};
typedef struct mjuiItem_ mjuiItem;
struct mjUI_ {                    
  mjuiThemeSpacing spacing;       
  mjuiThemeColor color;           
  mjfItemEnable predicate;        
  void* userdata;                 
  int rectid;                     
  int auxid;                      
  int radiocol;                   
  int width;                      
  int height;                     
  int maxheight;                  
  int scroll;                     
  int mousesect;                  
  int mouseitem;                  
  int mousehelp;                  
  int mouseclicks;                
  int mousesectcheck;             
  int editsect;                   
  int edititem;                   
  int editcursor;                 
  int editscroll;                 
  char edittext[mjMAXUITEXT];     
  mjuiItem* editchanged;          
  int nsect;                      
  mjuiSection sect[mjMAXUISECT];  
};
typedef struct mjUI_ mjUI;
struct mjuiDef_ {                 
  int type;                       
  char name[mjMAXUINAME];         
  int state;                      
  void* pdata;                    
  char other[mjMAXUITEXT];        
  int otherint;                   
};
typedef struct mjuiDef_ mjuiDef;